--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
-    <string name="app_name">ProizvodCounter2</string>
+    <string name="app_name">Brojac na proizvodi</string>
+    <string name="pobaraj">POBARAJ PROIZVOD</string>
     <string name="kafeIme">KAFE</string>
     <string name="sladoledIme">SLADOLED</string>
     <string name="jabolkoIme">JABOLKO</string>
     <string name="bananaIme">BANANA</string>
     <string name="lebIme">LEB</string>
     <string name="vinoIme">VINO</string>
+    <string name="primerIme">PRIMER</string>
 </resources>
